# VkTemplate

./: CMakeLists.txt  CMakeSettings.json
clock/: lc.txt  line_count_default.txt
dependencies/vma/: CMakeLists.txt  vk_mem_alloc.h
include/: main_header.hpp
shaders/: compile.bat
